fix viterbi and foward backward, working on beam

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,7 @@
       "type": "python",
       "program": "ner.py",
       "console": "integratedTerminal",
-      "args": ["--model", "CRF", "--inference", "BEAM", "--train_path", "data/eng_try.train", "--dev_path", "data/eng_try.train", "--crf_model_path", "crf_model_full.plk"]
+      "args": ["--model", "CRF", "--inference", "VITERBI", "--crf_model_path", "crf_model_full.plk"]
     }
   ]
 }
